[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[project]
name = "django_tweets"
version = "0.0.1"
authors = [{ name = "Rami", email = "ramiboutas@protonmail.com" }]
description = "An app to manage tweets in a Django project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["tweepy"]

[project.urls]
"Homepage" = "https://github.com/ramiboutas/django-tweets"
"Bug Tracker" = "https://github.com/ramiboutas/django-tweets/issues"
